third_party/move/move-compiler-v2/tests/checking/typing/lambda_typed.exp

Diagnostics:
error: expected `|(&T, u64)|_` but found a value of type `|&T|`
   ┌─ tests/checking/typing/lambda_typed.move:40:13
   │
40 │             action(XVector::borrow(v, i), i); // expected to have wrong argument count
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `|u64|_` but found a value of type `|&T|`
   ┌─ tests/checking/typing/lambda_typed.move:48:13
   │
48 │             action(i); // expected to have wrong argument type
   │             ^^^^^^^^^

error: cannot use `()` with an operator which expects a value of type `u64`
   ┌─ tests/checking/typing/lambda_typed.move:56:21
   │
56 │             i = i + action(XVector::borrow(v, i)); // expected to have wrong result type
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot return `u64` from a function with result type `|integer| with copy+drop+store`
   ┌─ tests/checking/typing/lambda_typed.move:61:9
   │
61 │         x(1) // expected to be not a function
   │         ^^^^

error: cannot use `&u64` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/lambda_typed.move:67:43
   │
67 │         foreach(&v, |e: &u64| sum = sum + e) // expected to cannot infer type
   │                                           ^

error: cannot pass `|&u64|u64 with copy+drop+store` to a function which expects argument of type `|&u64|`
   ┌─ tests/checking/typing/lambda_typed.move:73:21
   │
73 │         foreach(&v, |e: &u64| { sum = sum + *e; *e }) // expected to have wrong result type of lambda
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: function type `|u64|u64` is not allowed as a field type
   ┌─ tests/checking/typing/lambda_typed.move:81:12
   │
81 │         f: |u64|u64, // expected lambda not allowed
   │            ^^^^^^^^
   │
   = required by declaration of field `f`
